# NeoPrompt

./: .dockerignore  .env.example  .env.local-hf  .gitignore  .mise.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NeoPrompt_TechSpecV2.md  PromptConsole_TechSpec.md  README.md  SECURITY.md  TECH_SPEC_FULL.md  bootstrap_audit_safe.sh  conftest.py  docker-compose.yml  mypy.ini  warp.md
backend/: .dockerignore  Dockerfile  __init__.py  alembic.ini  requirements-dev.txt  requirements.txt  uvicorn.out
configs/: models.yaml
docs/: ENGINE_API.md  HF_ADAPTER.md  METRICS.md  OPERATING_MODES.md  PROVIDER_POLICY.md  QUICKSTART.md  RULEPACKS.md  diagnostics.md  engine_endpoints.md  migration.md  optimizer.md  prompt_template.schema.json  promptdoc.schema.json  recipe.schema.json  recipes_authoring.md  recipes_coverage.md  rulepack.schema.json  rulepacks_authoring.md  runbook.md
frontend/: index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
nginx/: Dockerfile  default.conf
prompt-templates/: chatgpt.coding.baseline.yaml  chatgpt.law.baseline.yaml  chatgpt.politics.baseline.yaml  chatgpt.psychology.baseline.yaml  claude.law.baseline.yaml  claude.politics.baseline.yaml  deepseek.law.baseline.yaml  deepseek.psychology.baseline.yaml  deepseek.science.baseline.yaml  gemini.law.baseline.yaml  gemini.politics.baseline.yaml  gemini.psychology.baseline.yaml
recipes/: chatgpt.coding.basic.yaml  chatgpt.science.baseline.yaml  (+8 more)
sdk/python/neoprompt/: README.md  pyproject.toml
sdk/python/neoprompt/src/neoprompt/: __init__.py  client.py
(+94 files in other folders)
