[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neoprompt-sdk"
version = "0.1.0"
description = "Minimal Python SDK for NeoPrompt API"
readme = "README.md"
authors = [{ name = "NeoPrompt" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["httpx>=0.24,<1"]

[project.urls]
Homepage = "https://github.com/OWNER/REPO"

[tool.hatch.build.targets.wheel]
packages = ["src/neoprompt"]
